--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 .app-container {
   min-height: 350px;
 }
+
+.task-list {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+.task-item {
+  display: flex;
+  margin-bottom: 3px;
+}
+
+.task-text {
+  flex: 1 1 100%;
+  display: flex;
+  align-items: center;
+}
+
+.task-delete {
+}
